--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
     <h1>Edwon Lim</h1>
-    <h2>Front-End Web &amp; JavaScript While-End Developer</h2>
+    <h2>Front-End Web Developer &amp; JavaScript While-End Researcher</h2>
 </header>
