--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@
         <div class="container">
             <div class="inner">
                 {% include header.html %}
+                <hr>
+                {{ content }}
+                <hr>
+                {% include footer.html %}
             </div>
         </div>
     </body>
