--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-@media only screen and (min-width: 480px) and (max-width: 767px) {}
-
-@media only screen and (max-width: 479px) {}
-
 body {
     font-size: 1em;
     line-height: 1.5;
@@ -17,7 +13,7 @@ body {
 }
 
 .inner {
-    width: 620px;
+    width: 800px;
     margin: 0 auto;
 }
 
@@ -55,6 +51,29 @@ body {
     font-size: 24px;
     color: #999;
     margin-top: 0;
+}
+
+.container .inner hr {
+    height: 1px;
+    line-height: 1px;
+    border: none;
+    background: transparent url(/images/hr.png) 50% 0 no-repeat;
+}
+
+.container .inner footer {
+    margin-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    font-size: 13px;
+    color: #aaa;
+}
+
+.container .inner footer a {
+    color: #666;
+}
+
+.container .inner footer a:hover {
+    color: #444;
 }
 
 
