--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,16 @@
 <header>
     <h1>Edwon Lim</h1>
     <h2>Front-End Web Developer &amp; JavaScript While-End Researcher</h2>
+    <a target="_blank" href="http://weibo.com/n/edwonlim">
+        <img border="0" src="/images/weibo.png" alt="Weibo" title="Weibo"/>
+    </a>
+    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=946735537&site=qq&menu=yes">
+        <img border="0" src="/images/qq.png" alt="QQ" title="QQ"/>
+    </a>
+    <a target="_blank" href="http://gitcafe.com/EdwonLim">
+        <img border="0" src="/images/github.png" alt="Git" title="Git"/>
+    </a>
+    <a href="mailto:edwon.lim@gmail.com">
+        <img border="0" src="/images/mail.png" alt="Email" title="Email"/>
+    </a>
 </header>
