--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,11 @@ body {
     margin-top: 0;
 }
 
+.container .inner header a {
+    text-decoration: none;
+    margin: 0 5px;
+}
+
 .container .inner hr {
     height: 1px;
     line-height: 1px;
