--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <header>
     <h1>Edwon Lim</h1>
     <h2>Front-End Web Developer &amp; JavaScript While-End Researcher</h2>
+    {% if include.home == "true" %}
     <a target="_blank" href="http://weibo.com/n/edwonlim">
         <img border="0" src="/images/weibo.png" alt="Weibo" title="Weibo"/>
     </a>
@@ -13,4 +14,5 @@
     <a href="mailto:edwon.lim@gmail.com">
         <img border="0" src="/images/mail.png" alt="Email" title="Email"/>
     </a>
+    {% endif %}
 </header>
