--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <div class="inner">
-                {% include header.html %}
+                {% include header.html home="true" %}
                 <hr>
                 {{ content }}
                 <hr>
