--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Edwon Lim</h1>
+    <h1><a href="/">Edwon Lim</a></h1>
     <h2>Front-End Web Developer &amp; JavaScript While-End Researcher</h2>
     {% if include.home == "true" %}
     <a target="_blank" href="http://weibo.com/n/edwonlim">
