--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,11 @@ body {
     margin-bottom: 0;
 }
 
+.container .inner header h1 a {
+    text-decoration: none;
+    color: black;
+}
+
 .container .inner header h2 {
     font-family: 'Exo 2', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 400;
