--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ body {
 .container .inner header h1 a {
     text-decoration: none;
     color: black;
+    margin: 0;
 }
 
 .container .inner header h2 {
