--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,24 @@ body {
     line-height: 1.6;
 }
 
+.container .inner .home .pagination {
+    text-align: center;
+}
+
+.container .inner .home .pagination img {
+    width: 12px;
+    height: 12px;
+    margin: 0px 5px;
+}
+
+.container .inner .home .pagination a {
+    text-decoration: none;
+}
+
+.container .inner .home .pagination span.page_number {
+    font-size: 16px;
+}
+
 .container .inner p.meta {
     display: inline-block;
     margin-right: 10px;
