--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <header>
     <h1><a href="/">Edwon Lim</a></h1>
     <h2>Front-End Web Developer &amp; JavaScript While-End Researcher</h2>
+    <h4>Web前端开发者 & JavaScript全端探索者</h4>
     {% if include.home == "true" %}
     <a target="_blank" href="http://weibo.com/n/edwonlim">
         <img border="0" src="/images/weibo.png" alt="Weibo" title="Weibo"/>
