--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    Powered by <a href="http://jekyllrb.com/">Jekyll</a>. Hosted on <a href="https://gitcafe.com/EdwonLim/EdwonLim">GitCafe</a> / <a href="http://git.sipc115.com/yang.lin/yang-lin">Git115</a>.
+    Powered by <a href="http://jekyllrb.com/">Jekyll</a>. Hosted on <a href="http://github.com/EdwonLim/edwonlim.github.io">GitHub</a> / <a href="http://git.sipc115.com/yang.lin/yang-lin">Git115</a>.
 </footer>
