--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }} | Edwon.me</title>
         <meta name="viewport" content="width=device-width, user-scalable=no">
+        <title>{{ page.title }} | Edwon.me</title>
+        <link href="favicon.ico" type="image/x-icon" rel=icon>
+        <link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
         <link rel="stylesheet" href="/css/fonts.css">
         <link rel="stylesheet" href="/css/main.css">
     </head>
