--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <h2>Front-End Web Developer &amp; JavaScript While-End Researcher</h2>
     <h4>Web前端开发者 & JavaScript全端探索者</h4>
     {% if include.home == "true" %}
-    <a target="_blank" href="http://weibo.com/n/edwonlim">
+    <a target="_blank" href="http://weibo.com/n/edwon_lim">
         <img border="0" src="/images/weibo.png" alt="Weibo" title="Weibo"/>
     </a>
     <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=946735537&site=qq&menu=yes">
