--- a/css/main.css
+++ b/css/main.css
@@ -207,6 +207,29 @@ body {
     text-decoration: none;
 }
 
+.container .inner .about .header {
+    text-align: center;
+}
+
+.container .inner .about .header img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    box-shadow: 0px 0px 10px #888888;
+}
+
+.container .inner .about .qr {
+    text-align: center;
+}
+
+.container .inner .about .qr img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50px;
+    box-shadow: 0px 0px 10px #888888;
+    margin-right: 20px;
+}
+
 
 .container .inner footer {
     margin-top: 10px;
