--- a/css/main.css
+++ b/css/main.css
@@ -84,25 +84,28 @@ body {
     font-weight: bold;
     margin-bottom: 8px;
     padding: 0 40px;
-    display: flex;
-    display: -webkit-flex;
-    display: -moz-flex;
-    flex-flow: row wrap;
-    -webkit-flex-flow: row wrap;
-    -moz-flex-flow: row wrap;
-    align-items: flex-end;
-    -webkit-align-items: flex-end;
-    -moz-align-items: flex-end;
+    display: -moz-box;
+    display: -webkit-box;
+    display: -o-box;
+    display: box;
 }
 
 .container .inner .home h3 a {
     color: #008cba;
     text-decoration: none;
     min-width: 180px;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
 }
 
 .container .inner .home h3 a small {
     font-size: 12px;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
 }
 
 .container .inner .hone ul {
@@ -111,15 +114,10 @@ body {
 
 .container .inner .home ul li {
     padding-left: 2px;
-    display: flex;
-    display: -webkit-flex;
-    display: -moz-flex;
-    flex-flow: row wrap;
-    -webkit-flex-flow: row wrap;
-    -moz-flex-flow: row wrap;
-    align-items: flex-end;
-    -webkit-align-items: flex-end;
-    -moz-align-items: flex-end;
+    display: -moz-box;
+    display: -webkit-box;
+    display: -o-box;
+    display: box;
 }
 
 .container .inner .home ul li:nth-child(2n) {
@@ -129,6 +127,10 @@ body {
 
 .container .inner .home ul li img {
     margin-right: 5px;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
 }
 
 .container .inner .home ul li a {
@@ -136,11 +138,19 @@ body {
     color: #d5000d;
     line-height: inherit;
     margin-right: 15px;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
 }
 
 .container .inner .home ul li small {
     font-size: 0.8em;
     box-sizing: border-box;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
 }
 
 .container .inner .home ul li p {
