--- a/css/main.css
+++ b/css/main.css
@@ -84,28 +84,31 @@ body {
     font-weight: bold;
     margin-bottom: 8px;
     padding: 0 40px;
-    display: -moz-box;
-    display: -webkit-box;
-    display: -o-box;
-    display: box;
+    display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
+    -moz-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    -o-flex-flow: row wrap;
+    align-items: flex-end;
+    -webkit-align-items: flex-end;
+    -moz-align-items: flex-end;
+    -ms-align-items: flex-end;
+    -o-align-items: flex-end;
 }
 
 .container .inner .home h3 a {
     color: #008cba;
     text-decoration: none;
     min-width: 180px;
-    -moz-box-flex: 1;
-    -webkit-box-flex: 1;
-    -o-box-flex: 1;
-    box-flex: 1;
 }
 
 .container .inner .home h3 a small {
     font-size: 12px;
-    -moz-box-flex: 1;
-    -webkit-box-flex: 1;
-    -o-box-flex: 1;
-    box-flex: 1;
 }
 
 .container .inner .hone ul {
@@ -114,10 +117,21 @@ body {
 
 .container .inner .home ul li {
     padding-left: 2px;
-    display: -moz-box;
-    display: -webkit-box;
-    display: -o-box;
-    display: box;
+    display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
+    -moz-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    -o-flex-flow: row wrap;
+    align-items: flex-end;
+    -webkit-align-items: flex-end;
+    -moz-align-items: flex-end;
+    -ms-align-items: flex-end;
+    -o-align-items: flex-end;
 }
 
 .container .inner .home ul li:nth-child(2n) {
@@ -126,31 +140,22 @@ body {
 
 
 .container .inner .home ul li img {
+    display: block;
     margin-right: 5px;
-    -moz-box-flex: 1;
-    -webkit-box-flex: 1;
-    -o-box-flex: 1;
-    box-flex: 1;
 }
 
 .container .inner .home ul li a {
+    display: block;
     text-decoration: none;
     color: #d5000d;
     line-height: inherit;
     margin-right: 15px;
-    -moz-box-flex: 1;
-    -webkit-box-flex: 1;
-    -o-box-flex: 1;
-    box-flex: 1;
 }
 
 .container .inner .home ul li small {
+    display: block;
     font-size: 0.8em;
     box-sizing: border-box;
-    -moz-box-flex: 1;
-    -webkit-box-flex: 1;
-    -o-box-flex: 1;
-    box-flex: 1;
 }
 
 .container .inner .home ul li p {
@@ -237,7 +242,7 @@ body {
     height: 200px;
     border-radius: 50px;
     box-shadow: 0px 0px 10px #888888;
-    margin-right: 20px;
+    margin-left: 20px;
 }
 
 
