--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="inner">
                 {% include header.html home="true" %}
-                <hr>
+                <hr id="bar_hr">
                 {{ content }}
                 <hr>
                 {% include footer.html %}
