--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,9 @@ body {
     .container .inner header h2 {
         font-size: 12px;
     }
+    .container .inner .home ul {
+        padding: 10px;
+    }
     .container .inner .post img {
         max-width: 90%;
     }
