--- a/css/main.css
+++ b/css/main.css
@@ -83,28 +83,32 @@ body {
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 8px;
-    padding: 0 40px;
-    display: flex;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    flex-flow: row wrap;
-    -webkit-flex-flow: row wrap;
-    -moz-flex-flow: row wrap;
-    -ms-flex-flow: row wrap;
-    -o-flex-flow: row wrap;
-    align-items: flex-end;
-    -webkit-align-items: flex-end;
-    -moz-align-items: flex-end;
-    -ms-align-items: flex-end;
-    -o-align-items: flex-end;
+    display: box;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -o-box;
+    display: -ms-box;
 }
 
-.container .inner .home h3 a {
+.container .inner .home h3 div {
+    min-width: 150px;
+    text-align: center;
+    padding-top: 10px;
+    border-top: 2px solid #CCCCCC;
+    box-flex: 1;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    -ms-box-flex: 1;
+}
+
+.container .inner .home h3 div.cur {
+    border-top: 2px solid #008cba;
+}
+
+.container .inner .home h3 div a {
     color: #008cba;
     text-decoration: none;
-    min-width: 150px;
 }
 
 .container .inner .home h3 a small {
@@ -117,21 +121,6 @@ body {
 
 .container .inner .home ul li {
     padding-left: 2px;
-    display: flex;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    flex-flow: row wrap;
-    -webkit-flex-flow: row wrap;
-    -moz-flex-flow: row wrap;
-    -ms-flex-flow: row wrap;
-    -o-flex-flow: row wrap;
-    align-items: flex-end;
-    -webkit-align-items: flex-end;
-    -moz-align-items: flex-end;
-    -ms-align-items: flex-end;
-    -o-align-items: flex-end;
 }
 
 .container .inner .home ul li:nth-child(2n) {
@@ -283,7 +272,7 @@ body {
     .container .inner .post img {
         max-width: 90%;
     }
-    .container .inner .home h3 a {
+    .container .inner .home h3 div {
         min-width: 120px;
     }
 }
