--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ body {
     padding-left: 2px;
 }
 
-.container .inner .home ul li:nth-child(2n) {
+.container .inner .home ul li:nth-child(3n), .container .inner .home ul li:nth-child(3n+2) {
     list-style: none;
 }
 
@@ -274,6 +274,9 @@ body {
     }
     .container .inner .home h3 div {
         min-width: 120px;
+    }
+    .container .inner .home h3 a small {
+        display: block;
     }
 }
 
