--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
         <link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
         <link rel="stylesheet" href="/css/fonts.css">
         <link rel="stylesheet" href="/css/main.css">
+        <script type="text/javascript" src="/script/page.js"></script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -21,7 +22,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="inner">
+            <div id="inner" class="inner nofix">
                 {% include header.html home="true" %}
                 {{ content }}
                 <hr>
