--- a/css/main.css
+++ b/css/main.css
@@ -263,6 +263,7 @@ body {
     }
     .container .inner header {
         padding-top: 0px;
+        text-align: center;
     }
     .container .inner header h2 {
         font-size: 12px;
